added modified files

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "d911315f-eff9-45eb-a11d-8056bc70c176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -r requirements.text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "id": "ca07878d-fe2a-4b56-a014-c3660c9eba08",
    "metadata": {},
